[package]
name = "fluent-ergonomics"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]
edition = "2018"
version = "0.1.0"
description = "An ergonomics wrapper around Fluent-RS"
license = "BSD-3-Clause"
homepage = "https://github.com/luminescent-dreams/fluent-ergonomics"
repository = "https://github.com/luminescent-dreams/fluent-ergonomics"
categories = ["internationalization"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "readme.md",
    "LICENSE",
    "CODE_OF_CONDUCT.md",
]

[dependencies]
fluent = "0.11"
unic-langid = "0.8"
fluent-syntax = "*"
